--- a/package.json
+++ b/package.json
@@ -55,19 +55,16 @@
     "passport-local": "^1.0.0",
     "pg": "^6.0.1",
     "pg-hstore": "^2.3.2",
-    "react": "^15.1.0",
-    "react-bootstrap": "^0.29.4",
-    "react-bootstrap-datetimepicker": "0.0.22",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
-    "react-router-bootstrap": "^0.23.0",
-    "redux": "^3.5.2",
-    "redux-immutable-state-invariant": "^1.2.3",
-    "redux-thunk": "^2.1.0",
     "rimraf": "^2.5.3",
     "sequelize": "^3.23.3",
     "toastr": "^2.1.2",
+    "vue": "1.0.22",
+    "vue-html-loader": "1.2.2",
+    "vue-loader": "8.3.1",
+    "vue-router": "0.7.13",
+    "vue-strap": "1.0.7",
+    "vue-style-loader": "1.0.0",
+    "vuex": "0.6.3",
     "winston": "^2.2.0"
   },
   "devDependencies": {
