--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "vue-router": "0.7.13",
     "vue-strap": "1.0.7",
     "vue-style-loader": "1.0.0",
+    "vue-validator": "^2.1.5",
     "vuex": "0.6.3",
     "winston": "^2.2.0"
   },
